--- a/UAVFlightPath/app/src/main/res/layout/activity_waypoint_display.xml
+++ b/UAVFlightPath/app/src/main/res/layout/activity_waypoint_display.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="22.222222"
+            android:id="@+id/latText"
             android:layout_column="1"
             android:layout_row="0"
             />
@@ -37,6 +38,7 @@
             android:hint="22.222222"
             android:layout_column="1"
             android:layout_row="1"
+            android:id="@+id/lonText"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -48,9 +50,10 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="22.222222"
+            android:hint="1000"
             android:layout_column="1"
             android:layout_row="2"
+            android:id="@+id/altitudeText"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -58,13 +61,15 @@
             android:text="Velocity:"
             android:layout_column="0"
             android:layout_row="3"
+
             />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="22.222222"
+            android:hint="LIGHT SPEED"
             android:layout_column="1"
             android:layout_row="3"
+            android:id="@+id/velocityText"
             />
         </GridLayout>
     <GridLayout
@@ -87,6 +92,12 @@
         android:layout_height="wrap_content"
         android:text="Delete"
         android:id="@+id/deleteButton"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Return"
+        android:id="@+id/returnButton"
         />
     </GridLayout>
 
