--- a/UAVFlightPath/app/src/main/res/layout/activity_waypoint_display.xml
+++ b/UAVFlightPath/app/src/main/res/layout/activity_waypoint_display.xml
@@ -99,6 +99,26 @@
         android:text="Return"
         android:id="@+id/returnButton"
         />
+        <Button
+            android:layout_columnSpan="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear Path"
+            android:id="@+id/clearPath"
+            android:layout_row="1"
+            android:layout_column="1"
+            />
+        <Button
+
+            android:layout_columnSpan="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Export"
+            android:id="@+id/export"
+            android:layout_row="1"
+            android:layout_column="3"
+            />
+
     </GridLayout>
 
 </LinearLayout>
